// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField  a large TextField object should return a large TextField object  1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 8px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.2rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="exampleFullName"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full name
  </label>
</div>
`;

exports[`TextField Component base should return a TextField object 1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="exampleFullName"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full name
  </label>
</div>
`;

exports[`TextField a TextField object should return a TextField object with a red bg 1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: hsl(4.1,89.6%,58.4%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="exampleFullName2"
    name="exampleFullName2"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName2"
  >
    Full name2
  </label>
</div>
`;

exports[`TextField a plainText TextField should return a PlainText div TextField 1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  font-weight: inherit;
  width: 100%;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-bottom: 1rem;
  padding-top: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    className="c1"
    id="exampleFullName2"
    name="exampleFullName2"
  >
    <div>
      
    </div>
  </div>
  <label
    className="c2"
    htmlFor="exampleFullName2"
  >
    Full name2
  </label>
</div>
`;

exports[`TextField a small TextField object should return a disabled TextField 1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(4.1,89.6%,58.4%);
  box-shadow: 0 0 0 1px hsl(4.1,89.6%,58.4%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(4.1,89.6%,58.4%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={true}
    id="exampleFullName2"
    name="exampleFullName2"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName2"
  >
    Full name2
  </label>
</div>
`;

exports[`TextField a small TextField object should return a small TextField object  1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 2px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="exampleFullName"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full name
  </label>
</div>
`;

exports[`TextField a small TextField object should return a small TextField object with a red activeColor  1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(4.1,89.6%,58.4%);
  box-shadow: 0 0 0 1px hsl(4.1,89.6%,58.4%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(4.1,89.6%,58.4%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="exampleFullName2"
    name="exampleFullName2"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName2"
  >
    Full name2
  </label>
</div>
`;

exports[`TextField a small TextField object should return a small TextField object with space mb  1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="exampleFullName2"
    name="exampleFullName2"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName2"
  >
    Full name2
  </label>
</div>
`;

exports[`TextField with a password attribute should return a TextField of input type password 1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="password"
    name="password"
    readOnly={false}
    tabIndex="0"
    type="password"
  />
</div>
`;

exports[`TextField with an email attribute should return a TextField of input type email 1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="email"
    name="email"
    readOnly={false}
    tabIndex="0"
    type="email"
  />
</div>
`;

exports[`TextField with an id attribute provided should return a TextField with Label.htmlFor value based on controlId attribute 1`] = `
.c3 {
  background-color: transparent;
  color: hsl(0,0%,50%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 16px;
  padding-right: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="exampleFullNameCID"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullNameCID"
  >
    Full name
  </label>
  <div
    className="c3"
    id="exampleFullNameCIDHelp"
  >
    Please tell me your name
  </div>
</div>
`;

exports[`TextField with assistive text should return a TextField object contain Assistive Text string 1`] = `
.c3 {
  background-color: transparent;
  color: hsl(0,0%,50%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 16px;
  padding-right: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="exampleFullName"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full name
  </label>
  <div
    className="c3"
    id="exampleFullNameHelp"
  >
    Please tell me your name
  </div>
</div>
`;

exports[`TextField with custom assistive text props should return a TextField with custom assistive text props 1`] = `
.c2 {
  background-color: transparent;
  color: hsl(0,0%,50%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 0;
  padding-right: 0;
  padding-top: 16px;
  padding-bottom: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="formatterOptions"
    name="formatterOptions"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <div
    className="c2"
    id="formatterOptionsHelp"
  >
    Example: 123 ABC
  </div>
</div>
`;

exports[`TextField with custom control group props should return a TextField with custom control group props 1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 8px;
  padding-top: 0;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="formatterOptions"
    name="formatterOptions"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
</div>
`;

exports[`TextField with custom control label props should return a TextField with custom control label props 1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 0;
  padding-right: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="formatterOptions"
    name="formatterOptions"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="formatterOptions"
  >
    Address
  </label>
</div>
`;

exports[`TextField with formStyle set to filled and plain text should return a formStyle filled readonly TextField 1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  font-weight: inherit;
  width: 100%;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-bottom: 0.5rem;
  padding-top: calc(0.7rem + 1px);
  padding-left: 1rem;
  padding-right: 1rem;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    className="c1"
    id="exampleFullName"
    name="exampleFullName"
  >
    <div>
      I should be contained in a plain div
    </div>
  </div>
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full name
  </label>
</div>
`;

exports[`TextField with formStyle set to filled should return a formStyle filled TextField 1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: hsl(0,0%,90%);
  color: inherit;
  border: 0;
  border-bottom: 1px solid hsl(0,0%,25%);
  border-radius: 4px 4px 0 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px 4px 0 0;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1.5rem 1rem 0.5rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1.5rem -1rem -0.5rem;
  padding: 1.5rem 1rem 0.5rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(0.5rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(0.5rem + 2px));
  transform: translateX(-1rem) translateY(calc(0.5rem + 2px));
}

.c1 + label {
  background: transparent;
  line-height: 1;
  top: 0.8rem;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-bottom: 2px solid hsl(323.3,84.6%,28%);
  margin-bottom: -1px;
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="exampleFullName"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full name
  </label>
</div>
`;

exports[`TextField with formStyle set to filled, multiline and plain text should return a formStyle filled multline readonly TextField 1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  font-weight: inherit;
  width: 100%;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-bottom: 0.5rem;
  padding-top: calc(0.7rem + 1px);
  padding-left: 1rem;
  padding-right: 1rem;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    className="c1"
    id="exampleFullName"
    name="exampleFullName"
  >
    <div>
      I should be contained in a plain div
    </div>
  </div>
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full name
  </label>
</div>
`;

exports[`TextField with object in assistive text should return a TextField object contain Assistive Text object 1`] = `
.c4 {
  background-color: transparent;
  color: hsl(196.9,95%,47.8%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover,
.c4:active {
  color: hsl(210.9,71.5%,44.9%);
  cursor: pointer;
}

.c3 {
  background-color: transparent;
  color: hsl(0,0%,50%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 16px;
  padding-right: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="exampleFullName"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full name
  </label>
  <div
    className="c3"
    id="exampleFullNameHelp"
  >
    <a
      className="c4"
      href="https://youtu.be/tbNlMtqrYS0"
      target="_blank"
    >
      Well you know I'm gonna be...
    </a>
  </div>
</div>
`;

exports[`TextField with some other props should return a TextField object contain input with those other props  1`] = `
.c3 {
  color: hsl(4.1,89.6%,58.4%);
  background-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 16px;
  padding-right: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: hsl(4.1,89.6%,58.4%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(4.1,89.6%,58.4%);
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(4.1,89.6%,58.4%);
  box-shadow: 0 0 0 1px hsl(4.1,89.6%,58.4%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(4.1,89.6%,58.4%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="exampleFullName"
    link="abc"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full Name*
  </label>
  <div
    className="c3"
    id="exampleFullNameError"
  >
    This is a required field.
  </div>
</div>
`;

exports[`TextField with validation error should return a TextField object contain Assistive Text with error style 1`] = `
.c3 {
  color: hsl(4.1,89.6%,58.4%);
  background-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 16px;
  padding-right: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: hsl(4.1,89.6%,58.4%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.5rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(4.1,89.6%,58.4%);
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  outline: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 .grape-ui-select__control,
.c1 .DayPickerInput > input {
  margin: -1rem;
  padding: 1rem;
}

.c1 .grape-ui-select__control + .DayPickerInput-OverlayWrapper,
.c1 .DayPickerInput > input + .DayPickerInput-OverlayWrapper {
  -webkit-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  -ms-transform: translateX(-1rem) translateY(calc(1rem + 2px));
  transform: translateX(-1rem) translateY(calc(1rem + 2px));
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus,
.c1:focus-within {
  border-color: hsl(4.1,89.6%,58.4%);
  box-shadow: 0 0 0 1px hsl(4.1,89.6%,58.4%);
}

.c1:focus + label,
.c1:focus-within + label {
  color: hsl(4.1,89.6%,58.4%);
}

.c1::-webkit-input-placeholder,
.c1 input::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder,
.c1 input::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder,
.c1 input:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder,
.c1 input::placeholder {
  color: hsl(0,0%,75%);
}

.c1 .DayPickerInput > input {
  background: transparent;
  border: 0;
  font: inherit;
  outline: 0;
  width: 100%;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    id="exampleFullName"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full name
  </label>
  <div
    className="c3"
    id="exampleFullNameError"
  >
    This is a required field.
  </div>
</div>
`;
